results/SVCOMP/conversational/log-ExSymExe20-2024_03_12_00_05_57.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result ==> field2 >= field;
  //@ ensures !\result ==> field2 < field;
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires x >= 0 && z >= 0 && r >= 0;
  //@ ensures \result ==> z >= x;
  //@ ensures !\result ==> z < x;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field2 >= field;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field2 >= field;
                                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field2 < field;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field2 < field;
                                    ^
4 errors

class Main {
  spec_public static int field;
  spec_public static int field2;

  //@ requires field2 >= field;
  //@ ensures \result ==> field2 >= field;
  //@ ensures !\result ==> field2 < field;
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires x >= 0 && z >= 0 && r >= 0;
  //@ ensures \result ==> z >= x;
  //@ ensures !\result ==> z < x;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:2: error: <identifier> expected
  spec_public static int field;
             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:3: error: <identifier> expected
  spec_public static int field2;
             ^
2 errors

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires field2 >= field;
  //@ ensures \result ==> field2 >= field;
  //@ ensures !\result ==> field2 < field;
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires x >= 0 && z >= 0 && r >= 0;
  //@ ensures \result ==> z >= x;
  //@ ensures !\result ==> z < x;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
